# epn-tracker

./: .editorconfig  .env.dev.example  .env.prod.example  .gitignore  ERS_EPN_Notas_Mallas.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 26bf50491b15_add_resources_and_resource_votes.py  28e6246549d2_add_bimestre_score_overrides_to_student_.py  2ea23234de1d_initial_schema.py  76f41b09b8c2_use_timezone_aware_timestamps.py  ee36e5670096_initial_schema.py
backend/app/: main.py  router.py
backend/app/common/: decimal_utils.py  deps.py  enums.py  pagination.py
backend/app/core/: conf.py  email.py  logging.py  rate_limit.py  registrar.py
backend/app/database/: base.py  db.py  models.py  redis.py  types.py
backend/app/domain/: enums.py  numeric.py
backend/app/middleware/: request_context.py
backend/scripts/: entrypoint.sh  extract_curricula.py
backend/seeds/: README.md  create_admin.py  dummy_users.py  loader.py
backend/seeds/data/: ciencia_datos_ia_2023.json  computacion_2020.json  sistemas_informacion_2023.json  software_2020.json
backend/tests/integration/: conftest.py  test_academic_admin_edit.py  test_academic_import.py  test_academic_periods.py  test_admin_professors.py  test_admin_users.py  test_auth.py  test_offering.py  test_requirement_sync.py  test_resources.py  test_simulation.py  test_student_flow.py  test_student_progress.py  test_student_simulation.py
backend/tests/unit/: test_configuration.py  test_curriculum_seed_data.py  (+1 more)
(+158 files in other folders)
