[project]
name = "epn-backend"
version = "0.1.0"
description = "Backend del sistema EPN Notas Mallas (FastAPI, arquitectura fba + dominio puro)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10",
    "python-multipart>=0.0.12",
    "email-validator>=2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    "fakeredis>=2.36.2",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TID"]
ignore = ["B008"]  # FastAPI usa llamadas en defaults (Depends)

[tool.ruff.lint.isort]
known-first-party = ["app", "seeds", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
